--- a/multi_agent_dialogues_with_tools.ipynb
+++ b/multi_agent_dialogues_with_tools.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMwYnalWf5a7dGBUmHXqHA9",
+      "authorship_tag": "ABX9TyPe+7va3i9iAZO9B/zBEFll",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -190,8 +190,15 @@
     {
       "cell_type": "code",
       "source": [
+        "# This library provides a convenient interface for searching and downloading scientific papers from the arXiv preprint server.\n",
         "!pip install arxiv\n",
+        "# Use the duckduckgo-search library to perform various tasks such as:\n",
+        "# - search for web pages, images, or videos.\n",
+        "# - get related search suggestions.\n",
+        "# - extract search results from the DuckDuckGo search engine.\n",
         "!pip install -U duckduckgo-search\n",
+        "# use the wikipedia library to perform various tasks such as:\n",
+        "# - search for Wikipedia pages based on keywords or titles, get summaries of Wikipedia pages, extract data from Wikipedia pages, such as lists of cities or countries, access the full text of Wikipedia pages\n",
         "!pip install wikipedia"
       ],
       "metadata": {
@@ -199,9 +206,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6QIOr1gKvF0S",
-        "outputId": "236e87da-e898-4789-96fe-6834c5f5cab3"
+        "outputId": "6e23d386-7d85-4cb0-dbec-bee39079a2de"
       },
-      "execution_count": 32,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -222,38 +229,17 @@
             "Requirement already satisfied: cffi>=1.12.0 in /usr/local/lib/python3.10/dist-packages (from curl-cffi>=0.6.2->duckduckgo-search) (1.16.0)\n",
             "Requirement already satisfied: certifi in /usr/local/lib/python3.10/dist-packages (from curl-cffi>=0.6.2->duckduckgo-search) (2024.2.2)\n",
             "Requirement already satisfied: pycparser in /usr/local/lib/python3.10/dist-packages (from cffi>=1.12.0->curl-cffi>=0.6.2->duckduckgo-search) (2.21)\n",
-            "Collecting wikipedia\n",
-            "  Downloading wikipedia-1.4.0.tar.gz (27 kB)\n",
-            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "Requirement already satisfied: wikipedia in /usr/local/lib/python3.10/dist-packages (1.4.0)\n",
             "Requirement already satisfied: beautifulsoup4 in /usr/local/lib/python3.10/dist-packages (from wikipedia) (4.12.3)\n",
             "Requirement already satisfied: requests<3.0.0,>=2.0.0 in /usr/local/lib/python3.10/dist-packages (from wikipedia) (2.31.0)\n",
             "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests<3.0.0,>=2.0.0->wikipedia) (3.3.2)\n",
             "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests<3.0.0,>=2.0.0->wikipedia) (3.6)\n",
             "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests<3.0.0,>=2.0.0->wikipedia) (2.0.7)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests<3.0.0,>=2.0.0->wikipedia) (2024.2.2)\n",
-            "Requirement already satisfied: soupsieve>1.2 in /usr/local/lib/python3.10/dist-packages (from beautifulsoup4->wikipedia) (2.5)\n",
-            "Building wheels for collected packages: wikipedia\n",
-            "  Building wheel for wikipedia (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for wikipedia: filename=wikipedia-1.4.0-py3-none-any.whl size=11678 sha256=9fbaa07b4a430ea281030142c9ff602a60c41a3e3e4262fb6e587f1d51a2ecbd\n",
-            "  Stored in directory: /root/.cache/pip/wheels/5e/b6/c5/93f3dec388ae76edc830cb42901bb0232504dfc0df02fc50de\n",
-            "Successfully built wikipedia\n",
-            "Installing collected packages: wikipedia\n",
-            "Successfully installed wikipedia-1.4.0\n"
+            "Requirement already satisfied: soupsieve>1.2 in /usr/local/lib/python3.10/dist-packages (from beautifulsoup4->wikipedia) (2.5)\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from google.colab import userdata\n",
-        "OPENAI_API_KEY = userdata.get('openai_key')"
-      ],
-      "metadata": {
-        "id": "sctGjPChtdvI"
-      },
-      "execution_count": 11,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -277,6 +263,10 @@
       },
       "outputs": [],
       "source": [
+        "# Callable and List are imported from the typing module.\n",
+        "# These are used for type hinting, which helps with code readability and static type checking.\n",
+        "# Callable is used for function type hinting,\n",
+        "# and List is used for list type hinting.\n",
         "from typing import Callable, List\n",
         "\n",
         "from langchain.memory import ConversationBufferMemory\n",
@@ -329,87 +319,99 @@
     {
       "cell_type": "code",
       "source": [
+        "# Define a class named DialogueAgent\n",
         "class DialogueAgent:\n",
+        "    # Initialize the DialogueAgent with a name, system message, and a model\n",
         "    def __init__(\n",
         "        self,\n",
-        "        name: str,\n",
-        "        system_message: SystemMessage,\n",
-        "        model: ChatOpenAI,\n",
+        "        name: str,  # The name of the DialogueAgent\n",
+        "        system_message: SystemMessage,  # The system message to be used by the DialogueAgent\n",
+        "        model: ChatOpenAI,  # The model to be used by the DialogueAgent for chatting\n",
         "    ) -> None:\n",
-        "        self.name = name\n",
-        "        self.system_message = system_message\n",
-        "        self.model = model\n",
-        "        self.prefix = f\"{self.name}: \"\n",
-        "        self.reset()\n",
+        "        self.name = name  # Set the name of the DialogueAgent\n",
+        "        self.system_message = system_message  # Set the system message of the DialogueAgent\n",
+        "        self.model = model  # Set the model of the DialogueAgent\n",
+        "        self.prefix = f\"{self.name}: \"  # Set the prefix for the DialogueAgent's messages\n",
+        "        self.reset()  # Reset the DialogueAgent's message history\n",
         "\n",
+        "    # Define a method to reset the DialogueAgent's message history\n",
         "    def reset(self):\n",
-        "        self.message_history = [\"Here is the conversation so far.\"]\n",
+        "        self.message_history = [\"Here is the conversation so far.\"]  # Initialize the message history\n",
         "\n",
+        "    # Define a method for the DialogueAgent to send a message\n",
         "    def send(self) -> str:\n",
         "        \"\"\"\n",
         "        Applies the chatmodel to the message history\n",
         "        and returns the message string\n",
         "        \"\"\"\n",
+        "        # Generate a message using the model and the current message history\n",
         "        message = self.model(\n",
         "            [\n",
         "                self.system_message,\n",
         "                HumanMessage(content=\"\\n\".join(self.message_history + [self.prefix])),\n",
         "            ]\n",
         "        )\n",
-        "        return message.content\n",
+        "        return message.content  # Return the content of the message\n",
         "\n",
+        "    # Define a method for the DialogueAgent to receive a message\n",
         "    def receive(self, name: str, message: str) -> None:\n",
         "        \"\"\"\n",
         "        Concatenates {message} spoken by {name} into message history\n",
         "        \"\"\"\n",
+        "        # Add the received message to the message history\n",
         "        self.message_history.append(f\"{name}: {message}\")\n",
         "\n",
         "\n",
+        "# Define a class named DialogueSimulator\n",
         "class DialogueSimulator:\n",
+        "    # Initialize the DialogueSimulator with a list of agents and a selection function\n",
         "    def __init__(\n",
         "        self,\n",
-        "        agents: List[DialogueAgent],\n",
-        "        selection_function: Callable[[int, List[DialogueAgent]], int],\n",
+        "        agents: List[DialogueAgent],  # The agents participating in the dialogue\n",
+        "        selection_function: Callable[[int, List[DialogueAgent]], int],  # Function to select the next speaker\n",
         "    ) -> None:\n",
-        "        self.agents = agents\n",
-        "        self._step = 0\n",
-        "        self.select_next_speaker = selection_function\n",
+        "        self.agents = agents  # Set the agents of the DialogueSimulator\n",
+        "        self._step = 0  # Initialize the step counter\n",
+        "        self.select_next_speaker = selection_function  # Set the selection function\n",
         "\n",
+        "    # Define a method to reset the DialogueSimulator\n",
         "    def reset(self):\n",
-        "        for agent in self.agents:\n",
-        "            agent.reset()\n",
+        "        for agent in self.agents:  # For each agent in the dialogue\n",
+        "            agent.reset()  # Reset the agent\n",
         "\n",
+        "    # Define a method to inject a message into the dialogue\n",
         "    def inject(self, name: str, message: str):\n",
         "        \"\"\"\n",
         "        Initiates the conversation with a {message} from {name}\n",
         "        \"\"\"\n",
-        "        for agent in self.agents:\n",
-        "            agent.receive(name, message)\n",
+        "        for agent in self.agents:  # For each agent in the dialogue\n",
+        "            agent.receive(name, message)  # The agent receives the message\n",
         "\n",
         "        # increment time\n",
-        "        self._step += 1\n",
+        "        self._step += 1  # Increment the step counter\n",
         "\n",
+        "    # Define a method to perform a step in the dialogue\n",
         "    def step(self) -> tuple[str, str]:\n",
         "        # 1. choose the next speaker\n",
-        "        speaker_idx = self.select_next_speaker(self._step, self.agents)\n",
-        "        speaker = self.agents[speaker_idx]\n",
+        "        speaker_idx = self.select_next_speaker(self._step, self.agents)  # Select the next speaker\n",
+        "        speaker = self.agents[speaker_idx]  # Get the next speaker\n",
         "\n",
         "        # 2. next speaker sends message\n",
-        "        message = speaker.send()\n",
+        "        message = speaker.send()  # The speaker sends a message\n",
         "\n",
         "        # 3. everyone receives message\n",
-        "        for receiver in self.agents:\n",
-        "            receiver.receive(speaker.name, message)\n",
+        "        for receiver in self.agents:  # For each agent in the dialogue\n",
+        "            receiver.receive(speaker.name, message)  # The agent receives the message\n",
         "\n",
         "        # 4. increment time\n",
-        "        self._step += 1\n",
+        "        self._step += 1  # Increment the step counter\n",
         "\n",
-        "        return speaker.name, message"
+        "        return speaker.name, message  # Return the speaker's name and the message"
       ],
       "metadata": {
         "id": "kQaq_NavsZSA"
       },
-      "execution_count": 15,
+      "execution_count": 37,
       "outputs": []
     },
     {
