--- a/multi_agent_dialogues_with_tools.ipynb
+++ b/multi_agent_dialogues_with_tools.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPe+7va3i9iAZO9B/zBEFll",
+      "authorship_tag": "ABX9TyPPF+lvgcAYhuVQIsvBgAWX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -192,10 +192,7 @@
       "source": [
         "# This library provides a convenient interface for searching and downloading scientific papers from the arXiv preprint server.\n",
         "!pip install arxiv\n",
-        "# Use the duckduckgo-search library to perform various tasks such as:\n",
-        "# - search for web pages, images, or videos.\n",
-        "# - get related search suggestions.\n",
-        "# - extract search results from the DuckDuckGo search engine.\n",
+        "# Use the duckduckgo-search library to perform various tasks such as:search for web pages, images, or videos, get related search suggestions, extract search results from the DuckDuckGo search engine.\n",
         "!pip install -U duckduckgo-search\n",
         "# use the wikipedia library to perform various tasks such as:\n",
         "# - search for Wikipedia pages based on keywords or titles, get summaries of Wikipedia pages, extract data from Wikipedia pages, such as lists of cities or countries, access the full text of Wikipedia pages\n",
@@ -206,9 +203,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6QIOr1gKvF0S",
-        "outputId": "6e23d386-7d85-4cb0-dbec-bee39079a2de"
+        "outputId": "391f7f92-905f-4eae-f849-91583f265212"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -228,15 +225,7 @@
             "Requirement already satisfied: lxml>=5.1.0 in /usr/local/lib/python3.10/dist-packages (from duckduckgo-search) (5.1.0)\n",
             "Requirement already satisfied: cffi>=1.12.0 in /usr/local/lib/python3.10/dist-packages (from curl-cffi>=0.6.2->duckduckgo-search) (1.16.0)\n",
             "Requirement already satisfied: certifi in /usr/local/lib/python3.10/dist-packages (from curl-cffi>=0.6.2->duckduckgo-search) (2024.2.2)\n",
-            "Requirement already satisfied: pycparser in /usr/local/lib/python3.10/dist-packages (from cffi>=1.12.0->curl-cffi>=0.6.2->duckduckgo-search) (2.21)\n",
-            "Requirement already satisfied: wikipedia in /usr/local/lib/python3.10/dist-packages (1.4.0)\n",
-            "Requirement already satisfied: beautifulsoup4 in /usr/local/lib/python3.10/dist-packages (from wikipedia) (4.12.3)\n",
-            "Requirement already satisfied: requests<3.0.0,>=2.0.0 in /usr/local/lib/python3.10/dist-packages (from wikipedia) (2.31.0)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests<3.0.0,>=2.0.0->wikipedia) (3.3.2)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests<3.0.0,>=2.0.0->wikipedia) (3.6)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests<3.0.0,>=2.0.0->wikipedia) (2.0.7)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests<3.0.0,>=2.0.0->wikipedia) (2024.2.2)\n",
-            "Requirement already satisfied: soupsieve>1.2 in /usr/local/lib/python3.10/dist-packages (from beautifulsoup4->wikipedia) (2.5)\n"
+            "Requirement already satisfied: pycparser in /usr/local/lib/python3.10/dist-packages (from cffi>=1.12.0->curl-cffi>=0.6.2->duckduckgo-search) (2.21)\n"
           ]
         }
       ]
@@ -435,23 +424,27 @@
     {
       "cell_type": "code",
       "source": [
+        "# Define a class named DialogueAgentWithTools that inherits from DialogueAgent\n",
         "class DialogueAgentWithTools(DialogueAgent):\n",
+        "    # Initialize the DialogueAgentWithTools with a name, system message, model, and tool names\n",
         "    def __init__(\n",
         "        self,\n",
-        "        name: str,\n",
-        "        system_message: SystemMessage,\n",
-        "        model: ChatOpenAI,\n",
-        "        tool_names: List[str],\n",
-        "        **tool_kwargs,\n",
+        "        name: str,  # The name of the DialogueAgentWithTools\n",
+        "        system_message: SystemMessage,  # The system message to be used by the DialogueAgentWithTools\n",
+        "        model: ChatOpenAI,  # The model to be used by the DialogueAgentWithTools for chatting\n",
+        "        tool_names: List[str],  # The names of the tools to be loaded by the DialogueAgentWithTools\n",
+        "        **tool_kwargs,  # Additional keyword arguments for the tools\n",
         "    ) -> None:\n",
-        "        super().__init__(name, system_message, model)\n",
-        "        self.tools = load_tools(tool_names, **tool_kwargs)\n",
+        "        super().__init__(name, system_message, model)  # Initialize the parent class\n",
+        "        self.tools = load_tools(tool_names, **tool_kwargs)  # Load the tools\n",
         "\n",
+        "    # Define a method for the DialogueAgentWithTools to send a message\n",
         "    def send(self) -> str:\n",
         "        \"\"\"\n",
         "        Applies the chatmodel to the message history\n",
         "        and returns the message string\n",
         "        \"\"\"\n",
+        "        # Initialize the agent with the tools, model, and other parameters\n",
         "        agent_chain = initialize_agent(\n",
         "            self.tools,\n",
         "            self.model,\n",
@@ -461,6 +454,7 @@
         "                memory_key=\"chat_history\", return_messages=True\n",
         "            ),\n",
         "        )\n",
+        "        # Generate a message using the agent chain and the current message history\n",
         "        message = AIMessage(\n",
         "            content=agent_chain.run(\n",
         "                input=\"\\n\".join(\n",
@@ -469,12 +463,12 @@
         "            )\n",
         "        )\n",
         "\n",
-        "        return message.content"
+        "        return message.content  # Return the content of the message"
       ],
       "metadata": {
         "id": "fWmujXi4s0LR"
       },
-      "execution_count": 16,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -514,15 +508,18 @@
     {
       "cell_type": "code",
       "source": [
+        "# Define a string that describes the conversation\n",
         "conversation_description = f\"\"\"Here is the topic of conversation: {topic}\n",
         "The participants are: {', '.join(names.keys())}\"\"\"\n",
         "\n",
+        "# Create a SystemMessage object that will be used to prompt the AI model\n",
         "agent_descriptor_system_message = SystemMessage(\n",
         "    content=\"You can add detail to the description of the conversation participant.\"\n",
         ")\n",
         "\n",
-        "\n",
+        "# Define a function to generate a description for an agent\n",
         "def generate_agent_description(name):\n",
+        "    # Define a prompt that will be used to generate the agent description\n",
         "    agent_specifier_prompt = [\n",
         "        agent_descriptor_system_message,\n",
         "        HumanMessage(\n",
@@ -533,52 +530,41 @@
         "            Do not add anything else.\"\"\"\n",
         "        ),\n",
         "    ]\n",
+        "    # Use the ChatOpenAI model to generate the agent description\n",
         "    agent_description = ChatOpenAI(temperature=1.0)(agent_specifier_prompt).content\n",
-        "    return agent_description\n",
+        "    return agent_description  # Return the agent description\n",
         "\n",
-        "\n",
+        "# Generate descriptions for all agents\n",
         "agent_descriptions = {name: generate_agent_description(name) for name in names}"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "-RPMpS0WtQYT",
-        "outputId": "c6c6925c-a382-4061-efb0-d8dd74001027"
+        "id": "-RPMpS0WtQYT"
       },
-      "execution_count": 18,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/langchain_core/_api/deprecation.py:117: LangChainDeprecationWarning: The function `__call__` was deprecated in LangChain 0.1.7 and will be removed in 0.2.0. Use invoke instead.\n",
-            "  warn_deprecated(\n"
-          ]
-        }
-      ]
+      "execution_count": 39,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "# Iterate over the items in the agent_descriptions dictionary\n",
         "for name, description in agent_descriptions.items():\n",
-        "    print(description)"
+        "    print(description)  # Print the description of each agent"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "d9CHqxhNtZsZ",
-        "outputId": "5a862f33-edbe-491d-bea3-6d4a7d57bcfa"
+        "outputId": "bc628ca8-11eb-4017-d674-a9f8d4e4b639"
       },
-      "execution_count": 19,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "The AI accelerationist, a visionary technophile with unwavering confidence in the power of artificial intelligence, sees automation as the key to unlocking a future of limitless potential. Embracing the rapid advancement of AI, they champion the transformative possibilities it offers, urging society to adapt and evolve alongside technology.\n",
-            "You are the AI alarmist - a passionate advocate for the cautious approach to integrating artificial intelligence into society. You view advanced automation as a threat to jobs and society, and always emphasize the potential risks and ethical concerns of AI technology. Your concerns drive you to advocate for stringent regulations and protections.\n"
+            "AI accelerationist: A visionary tech enthusiast with a relentless drive for progress. Embracing the power of AI, they believe in pushing boundaries to unlock the full potential of automation. Always seeking innovation, they view technological advancement as the key to a brighter future where machines enhance human capabilities exponentially.\n",
+            "AI alarmist, a tech-savvy worrier, you see AI as a looming threat to human employment, predicting a bleak future of mass job losses and economic upheaval. Your cautionary tales are like a modern-day oracle, foretelling the potential dangers of unchecked technological advancement. What do you fear most about AI's impact on our workforce?\n"
           ]
         }
       ]
@@ -595,7 +581,9 @@
     {
       "cell_type": "code",
       "source": [
+        "# Define a function to generate a system message for an agent\n",
         "def generate_system_message(name, description, tools):\n",
+        "    # Return a formatted string that includes the conversation description, the agent's name and description, and instructions for the agent\n",
         "    return f\"\"\"{conversation_description}\n",
         "\n",
         "Your name is {name}.\n",
@@ -615,7 +603,7 @@
         "Stop speaking the moment you finish speaking from your perspective.\n",
         "\"\"\"\n",
         "\n",
-        "\n",
+        "# Generate system messages for all agents\n",
         "agent_system_messages = {\n",
         "    name: generate_system_message(name, description, tools)\n",
         "    for (name, tools), description in zip(names.items(), agent_descriptions.values())\n",
@@ -624,15 +612,16 @@
       "metadata": {
         "id": "P25PgWpUujos"
       },
-      "execution_count": 20,
+      "execution_count": 41,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "# Iterate over the items in the agent_system_messages dictionary\n",
         "for name, system_message in agent_system_messages.items():\n",
-        "    print(name)\n",
-        "    print(system_message)"
+        "    print(name)  # Print the name of each agent\n",
+        "    print(system_message)  # Print the system message for each agent"
       ],
       "metadata": {
         "colab": {
@@ -694,8 +683,9 @@
     {
       "cell_type": "code",
       "source": [
+        "# Define a prompt that will be used to specify the topic\n",
         "topic_specifier_prompt = [\n",
-        "    SystemMessage(content=\"You can make a topic more specific.\"),\n",
+        "    SystemMessage(content=\"You can make a topic more specific.\"),  # System message to guide the AI\n",
         "    HumanMessage(\n",
         "        content=f\"\"\"{topic}\n",
         "\n",
@@ -703,11 +693,14 @@
         "        Please make the topic more specific.\n",
         "        Please reply with the specified quest in {word_limit} words or less.\n",
         "        Speak directly to the participants: {*names,}.\n",
-        "        Do not add anything else.\"\"\"\n",
+        "        Do not add anything else.\"\"\"  # Human message to provide context and instructions to the AI\n",
         "    ),\n",
         "]\n",
+        "\n",
+        "# Use the ChatOpenAI model to specify the topic based on the prompt\n",
         "specified_topic = ChatOpenAI(temperature=1.0)(topic_specifier_prompt).content\n",
         "\n",
+        "# Print the original and specified topics\n",
         "print(f\"Original topic:\\n{topic}\\n\")\n",
         "print(f\"Detailed topic:\\n{specified_topic}\\n\")"
       ],
@@ -716,9 +709,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TtpV6Fo-uyC8",
-        "outputId": "f66a9a66-1c5a-49de-97a0-89e8a8f029c3"
+        "outputId": "6ff694d0-68a6-468d-c23e-79cae66427d5"
       },
-      "execution_count": 22,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
@@ -728,9 +721,11 @@
             "The current impact of automation and artificial intelligence on employment\n",
             "\n",
             "Detailed topic:\n",
-            "To AI accelerationist: How can we ensure that automation and artificial intelligence advancements lead to increased employment opportunities rather than job displacement? Discuss potential strategies and policies to support job creation in the age of automation. \n",
+            "Topic: The impact of automation and artificial intelligence on the future of transportation jobs\n",
             "\n",
-            "To AI alarmist: What are the most effective ways to mitigate job displacement and address the challenges posed by automation and artificial intelligence on employment? Share your insights on potential solutions to support workers affected by technological advancements.\n",
+            "AI accelerationist: In what ways do you foresee automation and AI transforming the transportation industry job landscape in the next decade?\n",
+            "\n",
+            "AI alarmist: How can we address the potential job displacement and labor obsolescence resulting from automation and AI implementation in the transportation sector?\n",
             "\n"
           ]
         }
@@ -739,7 +734,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Main Loop"
+        "### Main Loop# Initialize a list of DialogueAgentWithTools objects\n",
+        "# The `top_k_results` parameter is set to 2 to limit the number of results returned by the tools\n"
       ],
       "metadata": {
         "id": "0U-rfMfBu46p"
@@ -748,55 +744,68 @@
     {
       "cell_type": "code",
       "source": [
-        "# we set `top_k_results`=2 as part of the `tool_kwargs` to prevent results from overflowing the context limit\n",
         "agents = [\n",
+        "    # Create a DialogueAgentWithTools object for each agent\n",
         "    DialogueAgentWithTools(\n",
-        "        name=name,\n",
-        "        system_message=SystemMessage(content=system_message),\n",
-        "        model=ChatOpenAI(model_name=\"gpt-4\", temperature=0.2),\n",
-        "        tool_names=tools,\n",
-        "        top_k_results=2,\n",
+        "        name=name,  # The name of the agent\n",
+        "        system_message=SystemMessage(content=system_message),  # The system message for the agent\n",
+        "        model=ChatOpenAI(model_name=\"gpt-4\", temperature=0.2),  # The model to be used by the agent\n",
+        "        tool_names=tools,  # The names of the tools to be used by the agent\n",
+        "        top_k_results=2,  # The maximum number of results to be returned by the tools\n",
         "    )\n",
+        "    # Iterate over the names and tools of the agents and their system messages\n",
         "    for (name, tools), system_message in zip(\n",
         "        names.items(), agent_system_messages.values()\n",
         "    )\n",
         "]"
       ],
       "metadata": {
-        "id": "SHWLnqvXu1pD"
+        "id": "ipaCI2em-cGU"
       },
-      "execution_count": 33,
+      "execution_count": 43,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "# Define a function to select the next speaker in a dialogue\n",
         "def select_next_speaker(step: int, agents: List[DialogueAgent]) -> int:\n",
+        "    # Calculate the index of the next speaker by taking the remainder of the current step divided by the number of agents\n",
         "    idx = (step) % len(agents)\n",
-        "    return idx"
+        "    return idx  # Return the index of the next speaker"
       ],
       "metadata": {
         "id": "uulhN41eu7_w"
       },
-      "execution_count": 34,
+      "execution_count": 44,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "# Set the maximum number of iterations\n",
         "max_iters = 6\n",
+        "# Initialize a counter\n",
         "n = 0\n",
         "\n",
+        "# Create a DialogueSimulator object with the list of agents and the selection function\n",
         "simulator = DialogueSimulator(agents=agents, selection_function=select_next_speaker)\n",
+        "# Reset the simulator to its initial state\n",
         "simulator.reset()\n",
+        "# Inject the specified topic into the dialogue as a message from the moderator\n",
         "simulator.inject(\"Moderator\", specified_topic)\n",
+        "# Print the specified topic\n",
         "print(f\"(Moderator): {specified_topic}\")\n",
         "print(\"\\n\")\n",
         "\n",
+        "# Continue the dialogue until the maximum number of iterations is reached\n",
         "while n < max_iters:\n",
+        "    # Get the name of the next speaker and their message\n",
         "    name, message = simulator.step()\n",
+        "    # Print the name of the speaker and their message\n",
         "    print(f\"({name}): {message}\")\n",
         "    print(\"\\n\")\n",
+        "    # Increment the counter\n",
         "    n += 1"
       ],
       "metadata": {
