--- a/multi_agent_dialogues_with_tools.ipynb
+++ b/multi_agent_dialogues_with_tools.ipynb
@@ -56,7 +56,7 @@
         "id": "RcAXAVH9rx7B",
         "outputId": "4f0139e3-bc44-4047-b0fd-f021b0255304"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,7 +135,7 @@
         "id": "hz-OJcvcsDk3",
         "outputId": "9b4cf102-a1e5-40c9-bda5-bdf178f0502c"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -225,7 +225,15 @@
             "Requirement already satisfied: lxml>=5.1.0 in /usr/local/lib/python3.10/dist-packages (from duckduckgo-search) (5.1.0)\n",
             "Requirement already satisfied: cffi>=1.12.0 in /usr/local/lib/python3.10/dist-packages (from curl-cffi>=0.6.2->duckduckgo-search) (1.16.0)\n",
             "Requirement already satisfied: certifi in /usr/local/lib/python3.10/dist-packages (from curl-cffi>=0.6.2->duckduckgo-search) (2024.2.2)\n",
-            "Requirement already satisfied: pycparser in /usr/local/lib/python3.10/dist-packages (from cffi>=1.12.0->curl-cffi>=0.6.2->duckduckgo-search) (2.21)\n"
+            "Requirement already satisfied: pycparser in /usr/local/lib/python3.10/dist-packages (from cffi>=1.12.0->curl-cffi>=0.6.2->duckduckgo-search) (2.21)\n",
+            "Requirement already satisfied: wikipedia in /usr/local/lib/python3.10/dist-packages (1.4.0)\n",
+            "Requirement already satisfied: beautifulsoup4 in /usr/local/lib/python3.10/dist-packages (from wikipedia) (4.12.3)\n",
+            "Requirement already satisfied: requests<3.0.0,>=2.0.0 in /usr/local/lib/python3.10/dist-packages (from wikipedia) (2.31.0)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests<3.0.0,>=2.0.0->wikipedia) (3.3.2)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests<3.0.0,>=2.0.0->wikipedia) (3.6)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests<3.0.0,>=2.0.0->wikipedia) (2.0.7)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests<3.0.0,>=2.0.0->wikipedia) (2024.2.2)\n",
+            "Requirement already satisfied: soupsieve>1.2 in /usr/local/lib/python3.10/dist-packages (from beautifulsoup4->wikipedia) (2.5)\n"
           ]
         }
       ]
@@ -241,12 +249,12 @@
       "metadata": {
         "id": "i7nC3BQStn8m"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "SWkkt_YMrjOe"
       },
@@ -284,7 +292,7 @@
       "metadata": {
         "id": "H-yaaO2drvso"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -400,7 +408,7 @@
       "metadata": {
         "id": "kQaq_NavsZSA"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -468,7 +476,7 @@
       "metadata": {
         "id": "fWmujXi4s0LR"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -493,7 +501,7 @@
       "metadata": {
         "id": "Om6T5XjZtIbq"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -540,7 +548,7 @@
       "metadata": {
         "id": "-RPMpS0WtQYT"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -557,7 +565,7 @@
         "id": "d9CHqxhNtZsZ",
         "outputId": "bc628ca8-11eb-4017-d674-a9f8d4e4b639"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -612,7 +620,7 @@
       "metadata": {
         "id": "P25PgWpUujos"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -630,7 +638,7 @@
         "id": "ur9WDfCYut9I",
         "outputId": "d30f2241-162b-4df6-87fc-1ab253753e7b"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -711,7 +719,7 @@
         "id": "TtpV6Fo-uyC8",
         "outputId": "6ff694d0-68a6-468d-c23e-79cae66427d5"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -762,7 +770,7 @@
       "metadata": {
         "id": "ipaCI2em-cGU"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -777,7 +785,7 @@
       "metadata": {
         "id": "uulhN41eu7_w"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -815,7 +823,7 @@
         "id": "q_KVStPuwfQL",
         "outputId": "4576c8fb-9d11-4bfd-b5a1-7958128b439c"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
