--- a/multi_agent_dialogues_with_tools.ipynb
+++ b/multi_agent_dialogues_with_tools.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPPF+lvgcAYhuVQIsvBgAWX",
+      "authorship_tag": "ABX9TyPCoKiaT5Egz9pSkUl+uWWn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,10 +29,30 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Assignment Jasper Bongers\n"
+      ],
+      "metadata": {
+        "id": "pr_iAwOaYlZs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Agent Debates with Tools"
       ],
       "metadata": {
         "id": "zQRCRU8armm3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The goal is to use Langchain and create multiple agents that are using differnt tools and let these Agents interact together.\n",
+        "\n",
+        "The applications of these multi-agent systems using multiple tools are huge! They stongly enricht the power of LLM's by making connections with tools and API that can enrich with knowledge and updated information, as we are showing in this notebook.\n"
+      ],
+      "metadata": {
+        "id": "_rU_qBoqhcZS"
       }
     },
     {
@@ -307,7 +327,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "We will use the same DialogueAgent and DialogueSimulator classes defined in Multi-Player Authoritarian Speaker Selection."
+        "Let us now create a DialogueAgent and a DialogueSimulator classes"
       ],
       "metadata": {
         "id": "MJjJi2dwswJ4"
@@ -979,6 +999,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# The End"
+      ],
+      "metadata": {
+        "id": "xih6j4q9Yire"
+      }
     },
     {
       "cell_type": "code",
