--- a/multi_agent_dialogues_with_tools.ipynb
+++ b/multi_agent_dialogues_with_tools.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPCoKiaT5Egz9pSkUl+uWWn",
+      "authorship_tag": "ABX9TyMZ4XI1RpOVNjEFi1r486Ey",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -762,8 +762,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Main Loop# Initialize a list of DialogueAgentWithTools objects\n",
-        "# The `top_k_results` parameter is set to 2 to limit the number of results returned by the tools\n"
+        "### Main Loop Initialize a list of DialogueAgentWithTools objects\n",
+        "The `top_k_results` parameter is set to 2 to limit the number of results returned by the tools\n"
       ],
       "metadata": {
         "id": "0U-rfMfBu46p"
@@ -1008,15 +1008,6 @@
       "metadata": {
         "id": "xih6j4q9Yire"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "TS9rS0ZFxBx2"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
